tests/fixtures/should_fail/invalid_map_keys.bop
mut struct WrongMap {
    m1: map[bool[], bool];
}
